# MOSS-TTS-Nano

./: .gitignore  app.py  app_onnx.py  checkpoint_resolver.py  infer.py  infer_onnx.py  moss_tts_nano_runtime.py  onnx_tts_runtime.py  ort_cpu_runtime.py  pyproject.toml  requirements.txt  text_normalization_pipeline.py
finetuning/: dataset.py  sft.py  verify.py
finetuning/model_patches/: README.md  modeling_moss_tts_nano.py  prompting.py
moss_tts_nano/: __init__.py  cli.py  phoneme_ascii.py  reference_voices.py  synthesize.py  text_frontend.py
onnx/: export_hf_to_tts_onnx.py  export_moss_tts_browser_onnx.py
